--- a/Template/landpage.html
+++ b/Template/landpage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyJourn - Your Personal Journalling Website</title>
-  <link rel="stylesheet" href="landpage.css">
+  <link rel="stylesheet" href="Static\landpage.css">
 </head>
 
 <body>
