--- a/Template/landpage.html
+++ b/Template/landpage.html
@@ -24,7 +24,7 @@
       <h1>Welcome to MyJourn</h1>
       <p>Welcome to MyJourn, your personal journalling website. Here you can keep track of your thoughts, ideas, and
         memories in a secure and user-friendly environment.</p>
-      <a href="signup.html" class="cta-button">Let's Go</a>
+      <a href="signup.html" class="cta-button">Get Started</a>
     </section>
     <section id="about">
       <h1>About Us</h1>
