Fix missing semicolon in signup.css background-color property

--- a/Static/signup.css
+++ b/Static/signup.css
@@ -20,7 +20,7 @@
 
 .wrapper {
   overflow: hidden;
-  background-color: #9fbdca
+  background-color: #9fbdca;
   max-width: 390px;
   padding: 30px;
   border-radius: 15px;
